Se agrega la anotacion Id para indicar que es primary key el objeto y se elimina de la anotacion Column